sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: not found: value i
    i = 0;
    ^AlgCombSort:12: error: not found: value i
    while(i+lng < lng){
          ^AlgCombSort:13: error: not found: value i
      if(getValue(i+lng) < getValue(i)){
                  ^AlgCombSort:13: error: not found: value i
      if(getValue(i+lng) < getValue(i)){
                                    ^AlgCombSort:14: error: not found: value i
        swap(i, i+lng);
             ^AlgCombSort:14: error: not found: value i
        swap(i, i+lng);
                ^AlgCombSort:16: error: not found: value i
      i += 1;
      ^